Third pass: two of my own from this week, and the dead weight
S8786, in the class I wrote yesterday to make javadoc readable in Swagger:
"</?[a-z]+[^>]*>" lets the name and the tail fight over the same characters, so a
long run without a closing bracket makes the matcher try every split of it. One
character for the name and the rest to a class that cannot contain ">" leaves
nothing to backtrack over.

S6809 again, and again in yesterday's code: getSettings and updateSettings called
active() through `this`, so its @Transactional applied to nothing. Same fix as
the budget services — the annotated method stays for other beans, the class calls
a plain body.

S2119: a SecureRandom built for a single call. Seeding is the expensive part and
the whole point of the type is that it stays seeded; now it is a field.

Two classes deleted rather than tidied. JsonConfig was a @Configuration whose
only member was a private ObjectMapper nobody could reach — it configured
nothing, for anyone, ever. CreateTestData was a main() writing to a hardcoded
path on somebody else's machine, from the first week of the project.

S1192 where the literal is a name two places have to agree on: the sortable
columns in JobSearch, the group functions read by four switches, ungroup, mailto:
and CLOUD. S6353 and S5850 on three regexes. S6204, S1488, S1117, S1130, S1144,
S8491 — including two dangling javadoc blocks I created myself by inserting
@param blocks under an existing comment instead of into it.

Two kept deliberately, with the reason written down rather than the rule
silenced quietly: Thread.sleep in the manual-edit concurrency test is the subject
of the test — it is the window in which a reader outside the lock observes a
half-done revision, and awaiting a condition would remove the thing being
measured. And the "commented-out code" in LlmSettingsDefaultsTest is a quotation
of the yaml whose defaults that test pins; reworded so it reads as prose.

1006 tests green.